make build pass