@@ -27,7 +27,7 @@
         <module>TheArtOfJavaConcurrencyProgramming</module>
         <module>NumberGame</module>
         <module>codis</module>
-        <module>hystrix</module>
+<!--        <module>hystrix</module>-->
         <module>design_pattern</module>
         <module>producer-consumer</module>
         <module>distribute-architecture</module>
@@ -43,7 +43,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <lombok.version>1.16.16</lombok.version>
+        <lombok.version>1.18.26</lombok.version>
         <flink.version>1.6.2</flink.version>
         <testng.version>6.1.1</testng.version>
         <commons-io.version>2.4</commons-io.version>
@@ -259,6 +259,15 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>3.0.0</version>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash;Extra memory to prevent jvm crash during heavy Integration/unit test with newer lombok and jdk8&ndash;&gt;-->
+<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
